# ca-traffic-simulation

./: .gitignore  CMakeLists.txt  README.txt  cats-input.txt
src/: CDF.cpp  CDF.h  Inputs.cpp  Inputs.h  Lane.cpp  Lane.h  Road.cpp  Road.h  Simulation.cpp  Simulation.h  Statistic.cpp  Statistic.h  Vehicle.cpp  Vehicle.h  main.cpp
test/: cats  cats-input.txt  scaling.py
